# CrayOn

./: LICENSE.txt  README.md  README.mk
demo/: CMakeLists.txt  main.cpp
demo/CMake/: FindUSB.cmake
demo/coe/: k_faces.coe  k_test_copy.coe  k_xz11.coe  p_faces.coe  p_test_actv.coe  p_xz11.coe
demo/include/: Canva.h  Frame.h  Interface.h  Monitor.h  Target.h  Timer.h  Transceiver.h
demo/src/: Canva.cpp  Frame.cpp  Interface.cpp  Monitor.cpp  Target.cpp  Timer.cpp  Transceiver.cpp
firmware/: load.sh  makefile  transceiver.asm  transceiver.c  transceiver.ihx
fpga/: transceiver.ucf
fpga/coregen/: activation_buffer.asy  activation_buffer.gise  activation_buffer.mif  activation_buffer.ngc  activation_buffer.vhd  activation_buffer.vho  activation_buffer.xco  activation_buffer.xise  activation_buffer_flist.txt  activation_buffer_xmdf.tcl  bram_line.asy  bram_line.gise  bram_line.ngc  bram_line.vhd  bram_line.vho  bram_line.xco  bram_line.xise  bram_line_flist.txt  bram_line_xmdf.tcl  clk_manager.asy  clk_manager.gise  clk_manager.ncf  clk_manager.ucf  clk_manager.vhd  clk_manager.vho  clk_manager.xco  clk_manager.xdc  clk_manager.xise  clk_manager_flist.txt  clk_manager_xmdf.tcl  coregen.cgc  coregen.cgp  edit_activation_buffer.tcl  edit_clk_manager.tcl  edit_kernel_memory.tcl  edit_madd.tcl  edit_madd_pc.tcl  edit_program_memory.tcl  gen_activation_buffer.tcl  gen_clk_manager.tcl  (+56 more)
fpga/src/: ActivControl.vhd  ActivationUnit.vhd  CCU.vhd  Combiner.vhd  CombinerLine.vhd  CombinerPC.vhd  ConvControl.vhd  DMA.vhd  (+21 more)
training/: crayon.lua  draw.py  example.lua  faces.lua
(+152 files in other folders)
